// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Input Default renders correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border: 2px solid;
  border-color: #000;
  border-radius: 5px;
  border-color: #000;
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input Default renders disabled state correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  color: hsl(0,0%,58%);
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border: 2px solid;
  border-color: hsl(0,0%,58%);
  border-radius: 5px;
  border-color: hsl(0,0%,58%);
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="gray.3"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={true}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input Default renders error state correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  color: #db1d33;
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border: 2px solid;
  border-color: #db1d33;
  border-radius: 5px;
  border-color: #db1d33;
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="red"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #000;
  border-radius: 5px;
  border-color: #000;
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  border-bottom: solid 1px gray;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders disabled state correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  color: hsl(0,0%,58%);
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: hsl(0,0%,58%);
  border-radius: 5px;
  border-color: hsl(0,0%,58%);
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  border-bottom: solid 1px lightGray;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="gray.3"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={true}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders error state correctly 1`] = `
.c3 {
  box-sizing: border-box;
  padding-left: 4px;
  padding-right: 4px;
  font-size: .75rem;
  color: #db1d33;
  background-color: #fff;
  font-family: Chivo,Helvetica,Sans;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #db1d33;
  border-radius: 5px;
  border-color: #db1d33;
  border-radius: 5px;
}

.c0 {
  box-sizing: border-box;
  margin: 4px;
  position: relative;
}

.c2 {
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.c4 {
  border: none;
  border-bottom: solid 1px #db1d33;
  width: 100%;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: Chivo,Helvetica,Sans;
  padding-bottom: 4;
}

.c4:focus {
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::-moz-placeholder {
  color: hsl(0,0%,85%);
}

.c4:-ms-input-placeholder {
  color: hsl(0,0%,85%);
}

.c4::placeholder {
  color: hsl(0,0%,85%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="red"
      fontFamily="sans"
      fontSize=".75rem"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="c4"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;
